[package]
name = "task-manager"
version = "0.1.0"
authors = ["rbkretzer <rafael.bkretzer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
sysinfo = "0.29.10"
image = "0.24.7"
dioxus-sortable = "0.1.2"
futures = "0.3.29"
futures-channel = "0.3.29"
dioxus-charts = "0.1.3"

